<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rb_theron_common</name>
  <version>0.0.0</version>
  <description>The rb_theron_common package. It contains rb_theron common packages used for robot control and for simulation</description>

  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>

  <license>BSD</license>

  <exec_depend>rb_theron_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
