<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rb_theron_description</name>
  <version>0.0.0</version>
  <description>The rb_theron_description package</description>

  <maintainer email="robert@todo.todo">robert</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <!--depend>robotnik_sensors</depend-->
  <!--depend>rviz2</depend-->
  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
